...
@FontScalePreviews
@ThemePreviews
@LocalePreviews
@Composable
fun AddAccountScreenPreview() {
    val mockGroups = listOf(
        AccountGroup(id = 1, userId = 1, name = "Banks"),
        AccountGroup(id = 2, userId = 1, name = "Wallets")
    )
    PersonalMoneyManagemntTheme {
        AddAccountScreen(
            groups = mockGroups,
            userId = 1,
...
